--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -26,4 +26,6 @@ jobs:
         with:
           activation_code: ${{ secrets.ACTIVATION_CODE }}
           encryption_key: ${{ secrets.ENCRYPTION_KEY }}
+          backup_issues: false
+          backup_prs: true
 
