--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -1,7 +1,4 @@
-name: >-
-  Yedekleme Islemi [${{ github.event_name }}]
-  #${{ github.run_number }}:
-  Commit ${{ github.sha }} pushed by ${{ github.actor }}
+name: 'Yedekleme Islemi [${{ github.event_name }}] #${{ github.run_number }}: Commit ${{ github.sha }} pushed by ${{ github.actor }}'
 
 on:
   push:
