--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -1,4 +1,4 @@
-name: Yedekleme Islemi ${{ github.event_name }}
+name: "Yedekleme Islemi [${{ github.event_name }}] #${{ github.run_number }}: Commit ${{ github.sha }} pushed by ${{ github.actor }}"
 on:
   push:
 
