--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -13,5 +13,5 @@ jobs:
         uses: berkayy-atas/marketplace-test-workflow@latest
         with:
           activation_code: ${{ secrets.ACTIVATION_CODE }}
-          encryption_key: ${{ secrets.ENCRYPTION_KEY }}
+          encryption_password: ${{ secrets.ENCRYPTION_KEY }}
 
