--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -1,4 +1,4 @@
-#.github/workflows/backup.yml
+#.github/workflows/myAction.yml
 
 name: "Yedekleme Islemi"
 
@@ -10,14 +10,17 @@ on:
 
 jobs:
   run-backup:
-    # TEMİZLİK İŞİ İÇİN GEREKLİ İZİNLER EKLENDİ
+    # Temizlik işinin çalışabilmesi için gerekli izinler
     permissions:
       contents: read  # Depoyu okumak için
       actions: write   # Önbelleği silebilmek için
     
     uses: berkayy-atas/marketplace-test-workflow/.github/workflows/reusable-backup-workflow.yml@main
     with:
-      backup_path: './'
+      # Yeniden kullanılabilir iş akışının beklediği GEREKLİ girdiler
+      source-path: './' # Yedeklenecek dosya veya dizinin yolu
+      backup-file-name: 'my-repo-backup.zip' # Oluşturulacak yedek dosyasının adı
     secrets:
+      # Gerekli secret'ları yeniden kullanılabilir iş akışına aktarın
       activation_code: ${{ secrets.ACTIVATION_CODE }}
       encryption_password: ${{ secrets.ENCRYPTION_KEY }}
