--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -15,12 +15,7 @@ jobs:
       contents: read  # Depoyu okumak için
       actions: write   # Önbelleği silebilmek için
     
-    uses: berkayy-atas/marketplace-test-workflow/.github/workflows/reusable-backup-workflow.yml@main
+    uses: berkayy-atas/marketplace-test-workflow/.github/workflows/reusable-backup-workflow.yml@latest
     with:
-      # Yeniden kullanılabilir iş akışının beklediği GEREKLİ girdiler
-      source-path: './' # Yedeklenecek dosya veya dizinin yolu
-      backup-file-name: 'my-repo-backup.zip' # Oluşturulacak yedek dosyasının adı
-    secrets:
-      # Gerekli secret'ları yeniden kullanılabilir iş akışına aktarın
       activation_code: ${{ secrets.ACTIVATION_CODE }}
       encryption_password: ${{ secrets.ENCRYPTION_KEY }}
