--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -15,7 +15,7 @@ jobs:
       contents: read  # Depoyu okumak için
       actions: write   # Önbelleği silebilmek için
     
-    uses: berkayy-atas/marketplace-test-workflow/.github/workflows/reusable-backup-workflow.yml@main
+    uses: berkayy-atas/marketplace-test-workflow/.github/workflows/reusable-backup-workflow.yml@latest
     with:
       activation_code: ${{ secrets.ACTIVATION_CODE }}
       encryption_password: ${{ secrets.ENCRYPTION_KEY }}
