--- a/.github/workflows/myAction.yml
+++ b/.github/workflows/myAction.yml
@@ -16,6 +16,7 @@ jobs:
       actions: write   # Önbelleği silebilmek için
     
     uses: berkayy-atas/marketplace-test-workflow/.github/workflows/reusable-backup-workflow.yml@latest
-    secrets:
+    with:
       activation_code: ${{ secrets.ACTIVATION_CODE }}
       encryption_password: ${{ secrets.ENCRYPTION_KEY }}
+    secrets: inherit
